--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,15 +1,26 @@
 <p class="text-primary">contacts Us</p>
 
-<form action="" method="post">
+<form  #enquiry='ngForm' action="" method="post">
+    <h2>{{enquiry.value | json}}</h2>  
+    
+    <h2>{{enquiry1 |json}}</h2>
 
     <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control">
+      <!--  <input name='name' ngModel class="form-control"> --> <!-- Performing DATA BINDING USING ngModel-->
+        <input name='name' [(ngModel)]="enquiry1.name" class="form-control">  <!-- Performing  TWO WAY DATA BINDING USING ngModel-->
+    </div>
+    <div class="form-group">
+        <label>Email</label>
+      <!--  <input name='email' ngModel class="form-control"> --> <!-- Performing DATA BINDING USING ngModel-->
+        <input name='email' [(ngModel)]="enquiry1.email" class="form-control">  <!-- Performing TWO WAY DATA BINDING USING ngModel-->
+        
     </div>
 
     <div class="form-group">
         <label>Training</label>
-        <select class="form-control">
+      <!--  <select name="Tcourse" ngModel class="form-control"> --> <!-- Performing DATA BINDING USING ngModel-->
+            <select name="Tcourse" [(ngModel)]="enquiry1.Tcourse" class="form-control">  <!-- Performing TWO WAY DATA BINDING USING ngModel-->
             <option>--Select Training Course</option>
             <option *ngFor="let training of trainings">{{training}}</option>
         </select>
@@ -17,7 +28,8 @@
 
     <div class="form-group">
         <label>Mobile</label>
-        <input type="text" class="form-control">
+       <!-- <input  name='mobile' ngModel class="form-control"> --> <!-- Performing DATA BINDING USING  ngModel-->
+        <input  name='mobile' [(ngModel)]="enquiry1.mobile" class="form-control">  <!-- Performing TWO WAY DATA BINDING USING  ngModel-->
     </div>
     <button class="btn btn-success">Submit</button>
 </form>
